--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -34,6 +34,7 @@
                     tools:context="com.example.punyawork.MainActivity2" />
             </com.google.android.material.appbar.AppBarLayout>
             <androidx.core.widget.NestedScrollView
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true">
@@ -86,7 +87,8 @@
                         android:layout_marginBottom="20dp"
                         app:layout_constraintBottom_toTopOf="@+id/relativeLayout6"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5" />
+                        app:layout_constraintTop_toBottomOf="@+id/relativeLayout5"
+                        app:layout_constraintVertical_bias="0.0" />
 
                     <RelativeLayout
                         android:id="@+id/relativeLayout6"
