--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Punyawork" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Punyawork" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/colorPrimary</item>
+        <!-- <item name="colorPrimary">this indicate the color of App Bar</item> -->
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <!-- <item name="colorPrimary">this indicate the color of Status Bar</item> -->
         <item name="colorAccent">@color/colorAccent</item>
+        <!-- <item name="colorPrimary">this indicate the color of Editable Text, Checkbox</item> -->
+
     </style>
 
     <style name="Theme.Punyawork" parent="Base.Theme.Punyawork" />
